--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -31,7 +31,7 @@ import { Image } from "astro:assets";
         >.
       </p>
       <p class="text-text-muted">
-        Want to have a quick chat? <br /> DM me on X/Twitter or LinkedIn.
+        Want to chat? DM me on X/Twitter or LinkedIn.
       </p>
     </div>
     <div class="flex gap-4 mt-8 items-center justify-center sm:justify-start">
